[package]
name = "happynewyear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "*"
unicode-segmentation = "*"
rand = "*"
console = "*"

[dependencies.pancurses]
version = "0.17"
features = ["win32"]
